--- a/src/pages/test/countDown/index.less
+++ b/src/pages/test/countDown/index.less
@@ -2,11 +2,14 @@
 @colorGray: #70859F;
 .courseCenter {
   box-sizing: border-box;
-  height: calc(100vh);
+  height: calc(30vh);
   padding-top: 113px;
   background: linear-gradient(#4D7E9B, #162B41); /* 更浅的颜色 */
   display: flex;
   flex-direction: column;
+  width: 800px;
+  margin: 0 auto;
+  margin-top: 400px;
 }
 .sticker{
   flex: 1;
